examples/bad/struct_clash.hmy
service_name: RepeatedRoute
service_version: 1.0.0

struct Str1 { name : String }

resource Str1 ("/res")
resource Str1 ("/res2")

